<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Joyplus</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="netstate">Network</string>
    <string name=" networknotwork">Oops, some problem with your network connection, Please retry</string>
    <string name=" ok">Exit</string>
    <string name="  cancel">Cancel</string>
    <string name="init_decoders">Preparing decode package, please wait…</string>
    <string name="VideoView_error_title">Failed to play, please retry</string>
    <string name=" addressnotwork">Video URL failed</string>
    <string name="VideoView_error_text_invalid_progressive_playback"> Video URL failed</string>
    <string name="VideoView_error_text_unknown"> Failed to play, please retry</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_play_name">TV series</string>
    <string name="shoucang_update_name">Favorites</string>
    <string name="oumei_play_name">America</string>
    <string name="dalu_play_name">China</string>
    <string name="gangju_play_name">Hongkong</string>
    <string name="taiju_play_name">Taiwan</string>
    <string name="hanju_play_name">Korea</string>
    <string name="riju_play_name">Japan</string>
    <string name="dongman_play_name">Anime</string>
    <string name="qinzidongman_play_name">Family</string>
    <string name="rexuedongman_play_name">Blood</string>
    <string name="hougongdoangman_play_name">Campus</string>
    <string name="tuilidongman_play_name">Mystery</string>
    <string name="jizhandongman_play_name">Robot War</string>
    <string name="gaoxiaodongman_play_name">Comedy</string>
    <string name="search_name">Search</string>
    <string name="yuedan_name">Especial Albums</string>
    <string name="dianyingyuedan_name">Movie albums</string>
    <string name="dianshijuyuedan_name">TV series albums</string>
    <string name="qitadianshiju_play_name">Others</string>
    <string name="dianying_name">Movies</string>
    <string name="quanbufenlei_name">Genre</string>
    <string name="dongzuopian_name">Action</string>
    <string name="kehuanpian_name">Sci-Fi</string>
    <string name="lunlipian_pian">Ethics</string>
    <string name="xijupian_name">Comedy</string>
    <string name="aiqingpian_name">Romance</string>
    <string name="xuanyipian_name">Mystery</string>
    <string name="kongbupian_name">Horror</string>
    <string name="donghuapian_name">Animation</string>
    <string name="qitadongman_play_name">Other</string>
    <string name="zuijinguankan_name">Recently watched</string>
    <string name="zhuijushoucang_name">Favorites</string>
    <string name="lixianshipin_name">Downloaded</string>
    <string name="zongyi_name">Variety</string>
    <string name="qitazongyi_name">Other</string>
    <string name="xiangqing_daoyan_name">Director:&#160;</string>
    <string name="xiangqing_zhuyan_name">Stars:&#160;</string>
    <string name="xiangqing_juqingjianjie_name">Summery:&#160;</string>
    <string name="time_yuezai_name">About finished at</string>
    <string name="time_kanwan_name"></string>
    <string name="time_time_name">15:08</string>
    <string name="xiangqing_fenshu_value">7.3</string>
    <string name="xiangqing_bofang">Play</string>
    <string name="xiangqing_xiazai">Download</string>
    <string name="xiangqing_yingping">Comments</string>
    <string name="xiangqing_tujiandianying">Recommended</string>
    <string name="gaoqing_gaoqing">720P</string>
    <string name="gaoqing_chaogaoqing">1080P</string>
    <string name="gaoqing_biaoqing">480P</string>
    <string name="yingpianshu">Videos</string>
    <string name="zongyi_gengxinzhi">Updated to  <xliff:g id="currentEpisode">%s</xliff:g></string>
    <string name="quanbu_name">All</string>
    <string name="xiangqing_zongyi_zhuchi"> Hosting / Stars:&#160;</string>
    <string name="xiangqing_zongyi_shoubo">Producer:&#160;</string>
    <string name="xiangqing_zongyi_jianjie">Summary:&#160;</string>
    <string name="xiangqing_yingping_no">No comment</string>
    <string name="movie_fenzhong">Mins</string>
    <string name="toast_no_play">Oops, cannot find any videos</string>
    <string name="toast_no_network">Please check your network settings</string>
    <string name="toast_no_retry">Retry</string>
    <string name="toast_no_exit">Quit</string>
    <string name="toast_setting_wifi">Network settings</string>
    <string name="toast_network_slow">The network is too slow to use </string>
    <string name="dialog_unband">Do you want to disconnect with Joyplus in mobilephone?</string>
    <string name="dialog_unband_yes">Yes</string>
    <string name="dialog_unband_no">No</string>
    <string name="search_hint">Enter 1st letter of each words</string>
    <string name="before_num_text"></string>
    <string name="after_num_text">&#160;videos</string>
    <string name="group_series_tv_dongman">All seasons</string>
    <string name="personal_record">Profiles and Settings</string>
    <string name="play_store">All videos</string>
    <string name="vip_login_dilog_viplogin">Log in</string>
    <string name="vip_login_dilog_username">Account</string>
    <string name="vip_login_dilog_passwd">Password</string>
    <string name="vip_login_dilog_login">Login</string>
    <string name="vip_login_dilog_cancel">Cancel</string>
    <string name="setting_vip_logout">VIP </string>
    <string name="setting_vip_local_counter">Please login</string>
    <string name="setting_vip_network_counter">Logged in</string>
    <string name="setting_dialog_logout_title">Log out</string>
    <string name="setting_dialog_logout_yes">Yes</string>
    <string name="setting_dialog_logout_no">No</string>
    <string name="yuedan_notice_num">and %1$s videos more</string>
    <string name="main_last_seen">Watched</string>
    <string name="setting_about">\n\n\n ShangHai JoyPlus Network Technology Co., Ltd insight into consumer’s video entertainment consumption habits changes and want to become the “share engine” of home entertainment.
        \n\n Mission: to share the fun of life and love
        \n\n Vision: To be the “Share engine” of home entertainment
        \n\n Purpose:
        \n\n To be the bridge of mobile screen and large screen entertainment;
        \n Bring a fun life with interactive entertainment technology;
        \n Build an intelligent, efficient and multi-screen monitoring broadcast system.
        \n\n Slogan:Enjoy sharing life</string>
    <string name="setting_declaration">
		\n\n\n\tAny user should carefully read this statement ( minors should be accompanied by their legal guardian to read ), before using this product. Users don\'t use the product to be necessary, once used, will be considered as the recognition and acceptance to the entire contents of this statement.
		\n\n\t1、Any resources and products which display or download through this product are produced or provided by third-party site owner. Our aggregation engine technology provides the user with auto search record function. All materials and information in the product only provided as original shape. Our company assumes haven\'t any responsibility and can not be responsible for the legitimacy, accuracy, authenticity, suitability, safety, etc. The content searched by user in this product does not represent any opinions and ideas of our company. It doesn\'t mean our company agree to or support any content, advocates or position on third party websites.
		\n\n\t2、If any third party website does not want to be included in our aggregation engine，should be promptly reflected to us. Otherwise, we will be collecting them as a resource website.
		\n\n\t3、Any company or individual who considers that the video content collected by our product might involve infringement, please timely written feedback to our company, and provide proof of identity, proof of ownership as well as details of infringement proof to us. When we receive these documents, we would disconnect  allegedly infringing content in the product based on reasonable judgment.
		\n\n\t4、User understands and agrees that the materials, information, products and services user obtained through this product are entirely in the user\'s own judgment, and bear all risks caused by the use of the contents, including but not limited to risks arising from reliance to the accuracy, completeness, or usefulness of the content. There\'s nothing to do with our company, if users affected by any mental, physical injuries and economic losses due to the video or related content while using this product. 
		\n\n\t5、Our company is not liable if users suffer any loss because of third party (such as the telecommunications sector) communications line failure, technical issues, networking,computer failure, system instabilitythe and other amount of force majeure. Our company promise to cooperate with relevant units in the first time and Timely repair, if the server does not operate normally due to technical failure and other reasons. But our company is not liable if users suffer any loss.
    </string>
    <string name="activity_vip_login_dialog_passwd">Password</string>
    <string name="layout_choose_defination_density">Definition</string>
    <string name="layout_choose_defination_sub">Subtitle</string>
    <string name="layout_choose_defination_cancel">Cancel</string>
    <string name="layout_choose_defination_complete">Done</string>
</resources>