<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:text="@string/time_yuezai_name"
        android:textColor="@color/time_color"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_xiangqing_bg"
        android:gravity="top" >

        <TextView
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_time"
            android:gravity="top"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/time_time_name"
            android:textSize="15dp"
            android:textColor="@color/time_over_time_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:text="@string/time_kanwan_name"
        android:textColor="@color/time_color"
        android:textSize="15dp" />

</LinearLayout>