<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <RelativeLayout 
        android:layout_width="500dp"
        android:layout_height="236dp"
        android:background="@drawable/vip_bg">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/vip_login_dilog_VIPLOGIN_ts"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/vip_login_dilog_viplogin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="66dp"
            android:layout_marginRight="66dp"
            android:layout_marginTop="59dp"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_zero"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <TextView 
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_weight="10"
                    android:text="@string/vip_login_dilog_username"
                    android:textSize="@dimen/vip_login_dilog_usrname_ts"
                    android:gravity="center_vertical|left"/>
                <EditText
                    android:id="@+id/et_vip_login_dialog_usrname" 
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_weight="27"
                    android:background="@drawable/bg_login_edittext"/>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_zero"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <TextView 
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_weight="10"
                    android:text="@string/activity_vip_login_dialog_passwd"
                    android:textSize="@dimen/vip_login_dilog_usrname_ts"
                    android:gravity="center_vertical|left"/>
                <EditText 
                    android:id="@+id/et_vip_login_dialog_pw"
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_weight="27"
                    android:background="@drawable/bg_login_edittext"
                    android:inputType="textPassword"/>     
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_zero"
                android:layout_weight="2"
                android:gravity="center_vertical">
                <Button 
                    android:id="@+id/bt_vip_login_dialog_login"
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_marginRight="9dp"
                    android:layout_weight="1"
                    android:background="@drawable/yingping_button_selector"
                    android:textSize="@dimen/vip_login_dilog_usrname_ts"
                    android:text="@string/vip_login_dilog_login"
                    android:gravity="center|center_vertical"/>
                <Button 
                    android:id="@+id/bt_vip_login_dialog_cancel"
                    android:layout_width="@dimen/layout_zero"
                    android:layout_height="@dimen/vip_login_dilog_item_high"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:background="@drawable/yingping_button_selector"
                    android:textSize="@dimen/vip_login_dilog_usrname_ts"
                    android:text="@string/vip_login_dilog_cancel"
                    android:gravity="center|center_vertical"/>
                
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
	
</LinearLayout>