<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
	<LinearLayout android:layout_width="400dp"
	    android:layout_height="175dp"
	    android:padding="20dp"
	    android:background="@drawable/alert_bg"
	    android:orientation="vertical">
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:id="@+id/layout_def"
	        android:orientation="horizontal">
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#f0f0f0"
	            android:paddingLeft="10dp"
	            android:textSize="25dp"
	            android:text="@string/layout_choose_defination_density"/>
	        <ImageView android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/arrow_left"
				android:id="@+id/showPre_def"	            
	            android:layout_gravity="center_vertical"/>
	        <Gallery android:layout_width="0dp"
	            android:layout_weight="1"
	            android:focusable="true"
	            android:id="@+id/gallery_def"
	            android:nextFocusDown="@+id/gallery_zimu"
	            android:layout_height="fill_parent"/>
	        <ImageView android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/arrow_right"
	            android:id="@+id/showNext_def"
	            android:layout_gravity="center_vertical"/>
	    </LinearLayout>
	    
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:id="@+id/layout_zimu"
	        android:orientation="horizontal">
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#f0f0f0"
	            android:paddingLeft="10dp"
	            android:textSize="25dp"
	            android:text="@string/layout_choose_defination_sub"/>
	        <ImageView android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/arrow_left"
				android:id="@+id/showPre_zimu"	            
	            android:layout_gravity="center_vertical"/>
	        <Gallery android:layout_width="0dp"
	            android:layout_weight="1"
	            android:focusable="true"
	            android:nextFocusDown="@+id/btn_ok_def"
	            android:nextFocusUp="@id/gallery_def"
	            android:id="@+id/gallery_zimu"
	            android:layout_height="fill_parent"/>
	        <ImageView android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/arrow_right"
	            android:id="@+id/showNext_zimu"
	            android:layout_gravity="center_vertical"/>
	    </LinearLayout>
	    
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="15dp"
	        android:gravity="center">
	        <Button android:layout_width="135dp"
	        android:layout_height="fill_parent"
	        android:id="@+id/btn_cancle_def"
	        android:background="@drawable/xunlei_return_btn_bg"
            android:textColor="#f0f0f0"
            android:textSize="25dp"
	        android:layout_gravity="center"
	        android:text="@string/layout_choose_defination_cancel"/>
	        <Button android:layout_width="135dp"
	        android:layout_height="fill_parent"
	        android:id="@+id/btn_ok_def"
	        android:background="@drawable/xunlei_return_btn_bg"
            android:textColor="#f0f0f0"
            android:textSize="25dp"
            android:layout_marginLeft="45dp"
	        android:layout_gravity="center"
	        android:text="@string/layout_choose_defination_complete"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>